--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,7 @@
 button {
   border-radius: 0.75rem;
   padding: 0 2rem;
-  font-size: 1rem;
+  font-size: 16px;
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
