--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -9,9 +9,8 @@
   align-items: center;
   padding: 0.75rem 1rem;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0.02em;
   color: #a8aebf;
 }
 .navbar a:hover,
