--- a/src/components/Badge/Badge.module.css
+++ b/src/components/Badge/Badge.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   border-radius: 50rem;
   font-weight: 600;
-  font-size: 0.88rem;
-  line-height: 171%;
+  font-size: 14px;
+  line-height: normal;
   color: #fff;
   width: 1.5rem;
   height: 1.5rem;
