--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -19,15 +19,14 @@
 
 .notfound-header {
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 48px;
   line-height: 117%;
-  letter-spacing: -0.02em;
   color: #ebeef5;
 }
 
 .notfound-desc {
   font-weight: 400;
-  font-size: 1.25rem;
+  font-size: 20px;
   line-height: 160%;
   text-align: center;
   color: #767e94;
