--- a/src/components/H1/H1.module.css
+++ b/src/components/H1/H1.module.css
@@ -1,7 +1,6 @@
 h1 {
   font-weight: 600;
-  font-size: 4rem;
+  font-size: 64px;
   line-height: 125%;
-  letter-spacing: -0.02em;
   color: #ebeef5;
 }
