--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -1,4 +1,4 @@
-.card-item {
+.cardItem {
   border-radius: 0.75rem;
   backdrop-filter: blur(80px);
   background: rgba(32, 40, 62, 0.8);
@@ -6,12 +6,12 @@
   position: relative;
 }
 
-.card-item__image {
+.image {
   border-radius: 0.5rem;
   margin-bottom: 1rem;
 }
 
-.card-item__stars {
+.stars {
   backdrop-filter: blur(8px);
   background: rgba(0, 0, 0, 0.65);
   border-radius: 0.5rem;
@@ -28,21 +28,21 @@
   gap: 0.25rem;
 }
 
-.card-item__name {
+.name {
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
   color: #ebeef5;
 }
 
-.card-item__header {
+.header {
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.is-favorite,
-.is-favorite:hover {
+.isFavorite,
+.isFavorite:hover {
   color: #37d8a7;
 }
