--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -4,11 +4,17 @@
   background: rgba(32, 40, 62, 0.8);
   padding: 0.5rem 0.5rem 1rem 0.5rem;
   position: relative;
+  max-width: 266px;
 }
 
 .image {
   border-radius: 0.5rem;
   margin-bottom: 1rem;
+  width: 266px;
+  height: 380px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 .stars {
